--- a/The-Earth-Angel/text/Makefile
+++ b/The-Earth-Angel/text/Makefile
@@ -14,5 +14,4 @@ $(ENG_DB_POST_PROCESSED): $(ENG_DB_PROCESSED) $(DB5_TO_DB5_XSLT)
 	xsltproc -o $@ $(DB5_TO_DB5_XSLT) $(ENG_DB_PROCESSED)
 
 $(ENG_EPUB) : $(ENG_DB_POST_PROCESSED)
-	$(JING) $<
-	ruby $(EPUB_SCRIPT) -s $(ENG_EPUB_XSLT) -o $@ $<
+	$(DBTOEPUB) -s $(ENG_EPUB_XSLT) -o $@ $<
